@@ -6,8 +6,10 @@ namespace comexbase
 		
 		public static readonly string ThanksTo =
 			"\r\n" +
-			"overflow91 (tester)\r\n" +
-			"teddino (tester)\r\n" +
+			"Richard Dale (richard.j.dale@gmail.com) - Kdebindings, Qyoto\r\n" +
+			"Juan Pablo González Riopedre (rigel.va@gmail.com) - spanish translation\r\n" +
+			"Teddino (teddiman@gmail.com) - tester\r\n" +			
+			"Overflow91 - tester\r\n" +			
 			"";
 	}
 }
